# djangotutorial5.1

./: README.md  polls.db  pyproject.toml
config/: settings.py  urls.py
fixtures/: choice.json  question.json
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_question_question_text.py
templates/admin/: base_site.html
templates/polls/: detail.html  index.html  results.html
