[project]
name = "djangotutorial5-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-debug-toolbar>=5.0.1",
    "django-dotenv>=1.4.2",
    "django-extensions>=3.2.3",
    "djangorestframework>=3.15.2",
    "isort>=6.0.1",
    "werkzeug>=3.1.3",
]
[tool.isort]
profile = "black"
